    - You now get Energy Crystals by smelting Celestial Gems in a Blast Furnace.
  The amount of energy the Energy Crystal, Energy Crystal Shards, and Light Block
    give you in the Crystal Energy Extractor now shows in the tooltip when you
    hover over the item.
  Added Plasma item.
    - But players won't be able to do anything with it until the next update.
CHANGED:
  Made ADDSynth Materials into its own mod.
  The Music Box gui no longer has the JEI item panel, because it doesn't need it.
  The Creative Tab icon for ADDSynth Energy is now the new Generator.
  The Generator that was part of Overpowered has been renamed to Crystal Energy Extractor.
  Renamed Energy Crystal to Celestial Gem.
    - You now get Energy Crystals by smelting Celestial Gems in a Blast Furnace.
    - Renamed all Energy Tools to Celestial Tools.
  Renamed mod to Overpowered Technology.
    - This will cause your configuration files to be reset.
  Moved Trophies to ADDSynthCore.
REMOVED:
  Removed the ability to move some Overpowered items into other Creative Tabs.
  Removed Unknown Technology.



v1.3.4 - December 28, 2020
  Major code optimizations and maintenance.
  Fix Laser Distance or Energy not saving on world reload.
  Energy stored in Batteries is now balanaced across all batteries on the
    Energy Network.
  Fixed several errors with the Universal Energy Interface.
  Batteries that are removed now redistribute any leftover energy to other
    connected batteries.
  Fix Universal Energy Interface not depositing energy into Energy
    Storage Containers.
  Fix machines receiving double energy if you had an Energy Storage Container
    on your energy network.
  You can now specify the Laser maximum receive variable in the config.
  Fixed a rare crash that would occur if you reloaded the world while a machine
    was working on its last item.
  Fix message telling players the black hole is not allowed in this dimension
    was displaying twice. - Error since v1.3.